--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == README
 
-This is a new and improved version of a price checker tool intended only for internal use at my company.
+This is a new and improved version of a price checker tool intended only for internal use at my company. You can see a working demo here: https://guarded-beach-91956.herokuapp.com/
